--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
                   name="password"
                   required
                 />
-                <label for="floating3">Password</label>
+                <label for="floating3">Şifre</label>
               </div>
             </div>
             <div class="modal-footer">
